@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# Copyright (C) 2008-2012, Luis Pedro Coelho <luis@luispedro.org>
+# Copyright (C) 2008-2013, Luis Pedro Coelho <luis@luispedro.org>
 # vim: set ts=4 sts=4 sw=4 expandtab smartindent:
 # 
 # Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -58,7 +58,7 @@ try:
     from .supervised.defaultclassifier import defaultclassifier
     from .supervised.defaultlearner import defaultlearner
     from .unsupervised.kmeans import kmeans
-    from .unsupervised import pdist
+    from .unsupervised import pdist, zscore
     from milk_version import __version__
 except ImportError, e:
     import sys
@@ -77,6 +77,7 @@ __all__ = [
     '__version__',
     'kmeans',
     'pdist',
+    'zscore',
     'defaultclassifier',
     'defaultlearner',
     'nfoldcrossvalidation',
